Tests/Should_succeed/4_Control_Structures/01_IfBool.decaf
class Test {
	void main(){
		boolean a;
		a = true;
		WriteString("0=");
		if (a)
		{
			WriteString("0");
		}
		WriteString("\n");
	}
}