tests/Should_fail/5_Functions/03_CallInvalidType.decaf
class Test {
	void m1(int a){
		WriteString("0=1");
		WriteString("\n");
	}
	void main(){
		boolean b;
		m1(b);
	}
}